--- a/index.html
+++ b/index.html
@@ -31,44 +31,44 @@
         </div>
         <table class="layout">
           <tr>
-            <td><button class="button" onclick="calculation('(')">(</button></td>
-            <td><button class="button" onclick="calculation(')')">)</button></td>
+            <td><button class="button" onclick="numberInput('(')">(</button></td>
+            <td><button class="button" onclick="numberInput(')')">)</button></td>
             <td><button id="clearAll" class="button" onclick="clearScrean()"><i class="fas fa-trash-alt"></i></button></td>
             <td>
-              <button id="clear" class="button" onclick="back()">
+              <button id="clear" class="button" onclick="deleteInput()">
                 <i class="fas fa-backspace"></i>
               </button>
             </td>
           </tr>
           <tr>
-            <td><button class="button numbers" onclick="calculation('7')">7</button></td>
-            <td><button class="button numbers" onclick="calculation('8')">8</button></td>
-            <td><button class="button numbers" onclick="calculation('9')">9</button></td>
+            <td><button class="button numbers" onclick="numberInput('7')">7</button></td>
+            <td><button class="button numbers" onclick="numberInput('8')">8</button></td>
+            <td><button class="button numbers" onclick="numberInput('9')">9</button></td>
             <td>
-              <button class="button" onclick="calculation('/')"><i class="fas fa-divide"></i></button>
+              <button class="button" onclick="numberInput('/')"><i class="fas fa-divide"></i></button>
             </td>
           </tr>
           <tr>
-            <td><button class="button numbers" onclick="calculation('4')">4</button></td>
-            <td><button class="button numbers" onclick="calculation('5')">5</button></td>
-            <td><button class="button numbers" onclick="calculation('6')">6</button></td>
+            <td><button class="button numbers" onclick="numberInput('4')">4</button></td>
+            <td><button class="button numbers" onclick="numberInput('5')">5</button></td>
+            <td><button class="button numbers" onclick="numberInput('6')">6</button></td>
             <td>
-              <button class="button" onclick="calculation('*')"><i class="fas fa-times"></i></button>
+              <button class="button" onclick="numberInput('*')"><i class="fas fa-times"></i></button>
             </td>
           </tr>
           <tr>
-            <td><button class="button numbers" onclick="calculation('1')">1</button></td>
-            <td><button class="button numbers" onclick="calculation('2')">2</button></td>
-            <td><button class="button numbers" onclick="calculation('3')">3</button></td>
+            <td><button class="button numbers" onclick="numberInput('1')">1</button></td>
+            <td><button class="button numbers" onclick="numberInput('2')">2</button></td>
+            <td><button class="button numbers" onclick="numberInput('3')">3</button></td>
             <td>
-              <button class="button" onclick="calculation('-')"><i class="fas fa-minus"></i></button>
+              <button class="button" onclick="numberInput('-')"><i class="fas fa-minus"></i></button>
             </td>
           </tr>
           <tr>
-            <td><button class="button numbers" onclick="calculation('.')">,</button></td>
-            <td><button class="button numbers" onclick="calculation('0')">0</button></td>
+            <td><button class="button numbers" onclick="numberInput('.')">,</button></td>
+            <td><button class="button numbers" onclick="numberInput('0')">0</button></td>
             <td><button id="equal" class="button" onclick="solve()"><i class="fas fa-equals"></i></button></td>
-            <td><button class="button" onclick="calculation('+')"><i class="fas fa-plus"></i></button></td>
+            <td><button class="button" onclick="numberInput('+')"><i class="fas fa-plus"></i></button></td>
           </tr>
         </table>
       </div>
