simplificação de funções e added comments

--- a/index.html
+++ b/index.html
@@ -23,7 +23,13 @@
   </head>
   <body id="fundo" class="fundoClaro">
     <div class="outterContainer">
-      <div class="logo"><i class="fas fa-robot fa-3x"><div class="olhos"><span id="leftEye" class="robotEyeLeft robotEyeColorLight"><span id="rightEye" class="robotEyeRight robotEyeColorLight"></span></div></i> Mr.Robot<span class="toggle"><i id="toggle" class="fas fa-toggle-off" onclick="lightOn()"></i></span></div>
+      <div class="logo"><i class="fas fa-robot fa-3x">
+        <div class="olhos">
+            <span id="leftEye" class="robotEyeLeft robotEyeColorLight">
+            <span id="rightEye" class="robotEyeRight robotEyeColorLight">
+        </div></i> Mr.Robot<span class="toggle">
+        <i id="toggle" class="fas fa-toggle-off" onclick="lightOn()"></i></span>
+      </div>
       <div class="container">
         <div id="display" class="displayOff">
           <div id="secondDisplay" class="display1">Let's Calcultate! </div>
